[gd_scene load_steps=21 format=3 uid="uid://y5yyyj2pjl5w"]

[ext_resource type="Script" uid="uid://bmopmg0byyg8a" path="res://login.gd" id="1_6uxbt"]
[ext_resource type="Texture2D" uid="uid://bg8jqwxn6nfj3" path="res://Assers/close.png" id="2_8amdc"]
[ext_resource type="Texture2D" uid="uid://b7ee2su2ic846" path="res://Assers/Advertencia.png" id="3_6cq21"]

[sub_resource type="Gradient" id="Gradient_0rlvn"]
offsets = PackedFloat32Array(0.73333335, 1)
colors = PackedColorArray(0.0627451, 0.06666667, 0.07450981, 1, 0.03137255, 0.03529412, 0.043137256, 1)

[sub_resource type="GradientTexture2D" id="GradientTexture2D_uo606"]
gradient = SubResource("Gradient_0rlvn")
fill = 1
fill_from = Vector2(0.5, 0.5)

[sub_resource type="SystemFont" id="SystemFont_8amdc"]
font_names = PackedStringArray("Montserrat")
font_weight = 999
subpixel_positioning = 0

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_6cq21"]
bg_color = Color(0.29803923, 0.41568628, 0.3647059, 1)
corner_radius_top_left = 10
corner_radius_top_right = 10
corner_radius_bottom_right = 10
corner_radius_bottom_left = 10

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_2yd6x"]
bg_color = Color(0.49019608, 0.6156863, 0.54901963, 1)
corner_radius_top_left = 10
corner_radius_top_right = 10
corner_radius_bottom_right = 10
corner_radius_bottom_left = 10

[sub_resource type="GDScript" id="GDScript_wu61n"]

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_73daq"]
bg_color = Color(0.16470589, 0.16470589, 0.16470589, 1)
corner_radius_top_left = 10
corner_radius_top_right = 10
corner_radius_bottom_right = 10
corner_radius_bottom_left = 10

[sub_resource type="SystemFont" id="SystemFont_5f3j4"]
font_names = PackedStringArray("Montserrat")
font_weight = 999
subpixel_positioning = 0

[sub_resource type="SystemFont" id="SystemFont_ch48r"]
font_names = PackedStringArray("Montserrat")
font_weight = 575
subpixel_positioning = 0

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_l1wf6"]
bg_color = Color(0.48953575, 0.6162741, 0.55009454, 1)
corner_radius_top_left = 10
corner_radius_top_right = 10
corner_radius_bottom_right = 10
corner_radius_bottom_left = 10

[sub_resource type="SystemFont" id="SystemFont_oouex"]
font_names = PackedStringArray("Montserrat")
subpixel_positioning = 0

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_ap25y"]
bg_color = Color(0.41568628, 0.41568628, 0.41568628, 1)
border_width_left = 25
border_color = Color(0.41568628, 0.41568628, 0.41568628, 1)
corner_radius_top_left = 10
corner_radius_top_right = 10
corner_radius_bottom_right = 10
corner_radius_bottom_left = 10

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_6uxbt"]
bg_color = Color(0.41568628, 0.41568628, 0.41568628, 1)
border_width_left = 2
border_width_top = 2
border_width_right = 2
border_width_bottom = 2
border_color = Color(1, 1, 1, 1)
corner_radius_top_left = 10
corner_radius_top_right = 10
corner_radius_bottom_right = 10
corner_radius_bottom_left = 10

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_uo606"]
bg_color = Color(0.41568628, 0.41568628, 0.41568628, 1)
border_width_left = 2
border_width_top = 2
border_width_right = 2
border_width_bottom = 2
border_color = Color(1, 1, 1, 1)
corner_radius_top_left = 10
corner_radius_top_right = 10
corner_radius_bottom_right = 10
corner_radius_bottom_left = 10

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_wu61n"]
bg_color = Color(0.85490197, 0.14509805, 0.15294118, 1)
corner_radius_top_left = 10
corner_radius_top_right = 10
corner_radius_bottom_right = 10
corner_radius_bottom_left = 10

[sub_resource type="SystemFont" id="SystemFont_73daq"]
font_names = PackedStringArray("Montserrat")
font_weight = 999
subpixel_positioning = 0

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_5f3j4"]
bg_color = Color(0.78039217, 0.6039216, 0, 1)
corner_radius_top_left = 10
corner_radius_top_right = 10
corner_radius_bottom_right = 10
corner_radius_bottom_left = 10

[node name="Login" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_6uxbt")

[node name="TextureRect" type="TextureRect" parent="."]
layout_mode = 0
offset_right = 1920.0
offset_bottom = 1080.0
texture = SubResource("GradientTexture2D_uo606")

[node name="BtnRegistrarse" type="Button" parent="TextureRect"]
layout_mode = 1
anchors_preset = 7
anchor_left = 0.5
anchor_top = 1.0
anchor_right = 0.5
anchor_bottom = 1.0
offset_left = 740.0
offset_top = -1055.0
offset_right = 920.0
offset_bottom = -1010.0
grow_horizontal = 2
grow_vertical = 0
focus_mode = 0
theme_override_fonts/font = SubResource("SystemFont_8amdc")
theme_override_styles/normal = SubResource("StyleBoxFlat_6cq21")
theme_override_styles/hover = SubResource("StyleBoxFlat_2yd6x")
text = "Registrarse"
script = SubResource("GDScript_wu61n")

[node name="Panel" type="Panel" parent="TextureRect"]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -360.0
offset_top = -230.0
offset_right = 360.0
offset_bottom = 360.0
grow_horizontal = 2
grow_vertical = 2
theme_override_styles/panel = SubResource("StyleBoxFlat_73daq")

[node name="Label" type="Label" parent="TextureRect/Panel"]
layout_mode = 0
offset_left = 62.0
offset_top = 60.0
offset_right = 657.0
offset_bottom = 105.0
theme_override_fonts/font = SubResource("SystemFont_5f3j4")
theme_override_font_sizes/font_size = 32
text = "Inicia sesión para continuar"
horizontal_alignment = 1
vertical_alignment = 1

[node name="BtnLogin" type="Button" parent="TextureRect/Panel"]
layout_mode = 1
anchors_preset = 7
anchor_left = 0.5
anchor_top = 1.0
anchor_right = 0.5
anchor_bottom = 1.0
offset_left = -295.0
offset_top = -135.0
offset_right = 295.0
offset_bottom = -60.0
grow_horizontal = 2
grow_vertical = 0
focus_mode = 0
theme_override_fonts/font = SubResource("SystemFont_ch48r")
theme_override_styles/normal = SubResource("StyleBoxFlat_6cq21")
theme_override_styles/hover = SubResource("StyleBoxFlat_l1wf6")
text = "Iniciar Sesión
"

[node name="UsernameLogin" type="LineEdit" parent="TextureRect/Panel"]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -295.0
offset_top = -105.0
offset_right = 295.0
offset_bottom = -30.0
grow_horizontal = 2
grow_vertical = 2
theme_override_fonts/font = SubResource("SystemFont_oouex")
theme_override_styles/normal = SubResource("StyleBoxFlat_ap25y")
theme_override_styles/focus = SubResource("StyleBoxFlat_6uxbt")
placeholder_text = "Ingresa tu nombre de usuario"

[node name="PasswordLogin" type="LineEdit" parent="TextureRect/Panel"]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -295.0
offset_top = 45.0
offset_right = 295.0
offset_bottom = 120.0
grow_horizontal = 2
grow_vertical = 2
theme_override_fonts/font = SubResource("SystemFont_oouex")
theme_override_styles/normal = SubResource("StyleBoxFlat_ap25y")
theme_override_styles/focus = SubResource("StyleBoxFlat_uo606")
placeholder_text = "Ingresa tu contraseña"

[node name="LabelUsername" type="Label" parent="TextureRect/Panel"]
layout_mode = 0
offset_left = 65.0
offset_top = 155.0
offset_right = 449.0
offset_bottom = 183.0
theme_override_fonts/font = SubResource("SystemFont_5f3j4")
theme_override_font_sizes/font_size = 22
text = "Nombre de usuario"
vertical_alignment = 1

[node name="LabelPassword" type="Label" parent="TextureRect/Panel"]
layout_mode = 0
offset_left = 65.0
offset_top = 300.0
offset_right = 449.0
offset_bottom = 328.0
theme_override_fonts/font = SubResource("SystemFont_5f3j4")
theme_override_font_sizes/font_size = 22
text = "Contraseña"
vertical_alignment = 1

[node name="DatosIncorrectos" type="Panel" parent="TextureRect"]
layout_mode = 0
offset_left = 695.0
offset_top = 30.0
offset_right = 1225.0
offset_bottom = 130.0
theme_override_styles/panel = SubResource("StyleBoxFlat_wu61n")

[node name="Label" type="Label" parent="TextureRect/DatosIncorrectos"]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -162.0
offset_top = -22.5
offset_right = 218.0
offset_bottom = 22.5
grow_horizontal = 2
grow_vertical = 2
theme_override_fonts/font = SubResource("SystemFont_73daq")
theme_override_font_sizes/font_size = 22
text = "Usuario o contraseña incorrectos"
horizontal_alignment = 1
vertical_alignment = 1

[node name="Close" type="Sprite2D" parent="TextureRect/DatosIncorrectos"]
position = Vector2(73, 50)
scale = Vector2(0.07958981, 0.07958981)
texture = ExtResource("2_8amdc")

[node name="CompletaCampos" type="Panel" parent="TextureRect"]
layout_mode = 0
offset_left = 695.0
offset_top = 30.0
offset_right = 1225.0
offset_bottom = 130.0
theme_override_styles/panel = SubResource("StyleBoxFlat_5f3j4")

[node name="Label" type="Label" parent="TextureRect/CompletaCampos"]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -184.5
offset_top = -22.5
offset_right = 242.5
offset_bottom = 22.5
grow_horizontal = 2
grow_vertical = 2
theme_override_fonts/font = SubResource("SystemFont_73daq")
theme_override_font_sizes/font_size = 22
text = "Por favor completa todos los campos"
horizontal_alignment = 1
vertical_alignment = 1

[node name="Advertencia" type="Sprite2D" parent="TextureRect/CompletaCampos"]
position = Vector2(50, 51)
scale = Vector2(0.10058585, 0.10058585)
texture = ExtResource("3_6cq21")

[connection signal="pressed" from="TextureRect/BtnRegistrarse" to="." method="_on_btn_registrarse_pressed"]
[connection signal="pressed" from="TextureRect/Panel/BtnLogin" to="." method="_on_btn_login_pressed"]
